melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_get_element_ptr_dynamic.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.ptr) {
    %0 = llvm.mlir.constant(42 : i64) : i64
    %1 = llvm.getelementptr %arg0[%0] : (!llvm.ptr, i64) -> !llvm.ptr, i64
    llvm.return
  }
}
