melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_insert_value.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.struct<(i64)>) {
    %0 = llvm.mlir.constant(42 : i64) : i64
    %1 = llvm.insertvalue %0, %arg0[0] : !llvm.struct<(i64)> 
    llvm.return
  }
}
