melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_store.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.ptr, %arg1: i64) {
    llvm.store %arg1, %arg0 : i64, !llvm.ptr
    llvm.return
  }
}
